code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

19-Nov-2010 Mark Dexter
# Remove duplicate article in sample data

19-Nov-2010 Christophe Demko
 ^ Fix Check for request forgeries
 # [#23397] return false; on config tabs throwing javascript error (Al Kent)
 # [#23370] *Modal Non-flash Uploader does not work

19-Nov-2010 Jean-Marie Simonet
 # [#23367] The secure parameter in menu item is not used. Thanks Christophe.
 # [#23304] List Weblinks in a Category doesn't show unpublished weblinks for logged in users. Thanks Mark.
 # [#22525] Mod_menu menu image no span with link-title anymore. Thanks Angie.
 $ Deleting libraries strings from lang installation as the library is now loaded there.
 $ Modifying a string value.
 # [#23408] Keep UI consistent for default home page in multilingual site. Thanks Christophe.
 # [#23388] mod_menu. Thanks James, Bill, Rouven

18-Nov-2010 Jean-Marie Simonet
$ Adding missing strings

18-Nov-2010 Andrew Eddie
 ! Added SQL diff for beta 14 to 'next version'.

17-Nov-2010 Mark Dexter
 # [#22484] JFolder::files() does not pass exclude parameters when recursing
 # Follow up on [#23360] to include two image files

17-Nov-2010 Christophe Demko
 # [#23197] onUserBeforeSave needs to be able cancel the creation of an account (Andrew Eddie)
 # [#23208] Logout from edit screen gives 403
 # [#23150] Error if menu alias = "component" (Elin Waring)
 # [#23325] Component Setting should get an apply button (Dennis Hermacki)
 # [#23305] No checking to ensure behavior.keepalive only gets loaded once. (Ian MacLennan)
 # [#23360] component_view Email to a friend etc. Patch attached (Angie Radtke)
 # [#23352] Text alignment issues at Pre-Installation check screen (Tim Plummer)
 # [#23310] Empty Components Sub-menu Displayed (Michael Babker)
 # [#23333] User information lost if get error message when trying to create (Michael Babker)